# aoc

./: Cargo.toml
2024/: Cargo.toml  README.md
2024/benches/: aoc_bench.rs  utilities_bench.rs
2024/d02/src/: main.rs
2024/d21/src/: main.rs
2024/d22/src/: main.rs
2024/d23/src/: main.rs
2024/d24/src/: config.schema.json  flowchart.mmd  main.rs
2024/d25/src/: main.rs
2024/src/: d00.rs  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  lib.rs  utils.rs
2025/: Cargo.toml
2025/benches/: aoc_bench.rs  utilities_bench.rs
2025/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  lib.rs  utils.rs
